compiler/weave_syntax/tests/data/syntax/IncompleteNamespace1.error
error: unexpected token '[token::end-of-file]', expected '[token::identifier]'
        --> <source>:2:1
         |
       2 | 
         | ^
error: unexpected token '[token::end-of-file]', expected '{'
        --> <source>:2:1
         |
       2 | 
         | ^
error: unexpected token '[token::end-of-file]', expected '}'
        --> <source>:2:1
         |
       2 | 
         | ^
